--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ crate-type = ["rlib"]
 
 [dependencies]
 libc = "0.2"
+libvlc-sys = "0.2"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 vswhom = "0.1.0"
