--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,7 @@ crate-type = ["rlib"]
 [dependencies]
 libc = "0.2"
 libvlc-sys = "0.2"
+paste = "1.0"
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 vswhom = "0.1.0"
