--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.3.0"
 authors = ["T. Okubo <t.okubo.rx78+github@gmail.com>"]
 
 description = "Rust bindings for libVLC media framework."
-keywords = ["libVLC", "bindings"]
+keywords = ["libVLC", "bindings", "multimedia"]
+categories = ["external-ffi-bindings", "multimedia"]
+documentation = "https://docs.rs/vlc-rs"
 repository = "https://code.videolan.org/videolan/vlc-rs"
 homepage = "https://code.videolan.org/videolan/vlc-rs"
 license = "MIT"
@@ -17,6 +19,11 @@ crate-type = ["rlib"]
 
 [dependencies]
 libc = "0.2"
+libvlc-sys = { path = "libvlc-sys" }
 
 [target.'cfg(target_os = "windows")'.build-dependencies]
 vswhom = "0.1.0"
+
+[features]
+default = []
+use-bindgen = ["libvlc-sys/use-bindgen"]
