--- a/libvlc-sys/Cargo.toml
+++ b/libvlc-sys/Cargo.toml
@@ -24,6 +24,9 @@ libc = "0.2"
 bindgen = {version = "0.59", optional = true }
 pkg-config = "0.3"
 
+[target.'cfg(target_os = "windows")'.build-dependencies]
+vswhom = "0.1.0"
+
 [features]
 default = []
 use-bindgen = ["bindgen"]
